(component): fix bug with heights/widths not being correct, Remove dead code, Fix backdrop flicker

--- a/src/components/drawer/drawer.scss
+++ b/src/components/drawer/drawer.scss
@@ -33,4 +33,5 @@
   height: 100%;
   background-color: #000;
   opacity: 0;
+  visibility: hidden;
 }
